Fix layout issue in editor

--- a/src/app/components/edit/edit.component.css
+++ b/src/app/components/edit/edit.component.css
@@ -18,6 +18,7 @@ main {
 .workspace-location {
 	font-weight: 700;
 	gap: 16px;
+	max-height: 100px;
 }
 
 .workspace-subheading {
@@ -38,7 +39,12 @@ main {
 }
 
 .product-list-container {
-	max-height: 50%;
+	height: calc((100% - 100px) / 2);
+}
+
+.nav-layer-container {
+	min-height: 45%;
+	max-height: calc((100% - 150px) / 2);
 }
 
 .workspace-id-copy:hover {
